# loop2recursion

./: LICENSE  README.md  average_maximum_stack_usages_and_average_writes_on_hottest_stack_address_under_different_recursion_depth_limits_and_loop_iterations.ipynb  baseline_loop2recursion_new_loop2recursion.ipynb  baseline_uwlalloc_recursion_depth_limit.ipynb  build_libuwlalloc.sh  build_loop2recursion.sh  build_pin_tools.sh  cache_analysis.ipynb  calculate_increases.py  compile_baseline.sh  draw_diagrams.py  experiment_data_visualization.ipynb  extract_loop_information.sh  grouped_bar_chart.py  line_chart_with_multiple_lines.py  loop_iterations_list.ipynb  parameters.sh  parse_clang_s_output.py  parse_data.py  parse_lldb_function_disassembly.py  print_loops_to_convert_in_files.py  profile.sh  profile_cache.sh  profile_extras.sh  profile_uwlalloc.sh  recursion_depth_limit.ipynb  run_optimized_loop2recursion.sh  run_unoptimized_loop2recursion.sh  selective_loop2recursion.sh  writes_on_stack_addresses_for_benchmark_dijkstra_on_cache_less_architecture.ipynb  writes_on_stack_addresses_on_cache_enabled_architecture.ipynb
experimental_code/: bisect_right.py  (+32 more)
experimental_code/UWLalloc/: Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.ac
experimental_code/UWLalloc/autom4te.cache/: output.0  requests  traces.0  traces.1
experimental_code/UWLalloc/include/: uwlalloc.h
experimental_code/UWLalloc/lib/: Makefile  Makefile.am  Makefile.in  README  uwlalloc.c
experimental_code/UWLalloc/lib/.deps/: newalloc.Po  uwlalloc.Po  walloc.Po
(+2544 files in other folders)
